compiler/weave_syntax/tests/data/syntax/complex/variable-binding.error
error: Expected '[token:identifier]'
        --> <source>:77:5
         |
      77 |     let y: Int32,
         |     ^^^
error: Unexpected tokens
        --> <source>:77:5
         |
      77 |     let y: Int32,
         |     ^^^^^^^^^^^^^
      78 |     var z: Int32,
         | ^^^^^^^^^^^^^^^^^
      79 |     out w: Int32
         | ^^^^^^^^^^^^^^^^
